# midi-mapper

./: .env.example  .gitignore  README.md  app.py  midi-mapper.service  midi_map.db  package-lock.json  requirements.txt  schema.sql  start  vdj-midi-mapper.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-dist/: 404.html  __next.__PAGE__.txt  __next._tree.txt  index.html  index.txt
src-tauri/frontend-dist/_next/static/Nc9gREiQWcHQCfNUdSjDN/: _buildManifest.js
src-tauri/frontend-dist/_next/static/chunks/: 160-a6f825b5429fc518.js  242-303c4523b3eab0c4.js  487-f28927d1cd792f43.js  8333b0d2-c0cb71fbaf30d415.js  framework-165adc7b97b7839f.js  main-37b41f746f9d6342.js  main-app-1cb6e5c16f893e5f.js  webpack-2cf93b787b7913cd.js
src-tauri/frontend-dist/_next/static/chunks/app/: layout-a85f39654d0c8601.js  page-64fad731a2d7206f.js
src-tauri/frontend-dist/_next/static/css/: 0905051bd7189009.css
src-tauri/frontend-dist/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
src-tauri/frontend-dist/bind/: __next._tree.txt  __next.bind.__PAGE__.txt  index.html  index.txt
src-tauri/frontend-dist/console/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.console.__PAGE__.txt  index.html
src-tauri/frontend-dist/v2/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.v2.__PAGE__.txt  __next.v2.txt  index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+131 files in other folders)
