[package]
name = "midi-mapper-desktop"
version = "0.1.0"
description = "Linux desktop shell for MIDI Mapper v2"
authors = ["Trifactoria"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "midi_mapper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["image-png"] }
